--- a/global_pandemic.Rmd
+++ b/global_pandemic.Rmd
@@ -121,7 +121,7 @@ htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 The Swedish Institute of Statistics (Statistik centralbyrån) has published the preliminary data on mortality rate in Sweden. The historical series cover the numbers of deaths during the last five years plus the year of 2020. The Swedish government makes the data public with the intention of informing the domestic society as well as the Nordic region about the consequences brought by the COVID-19 outbreak in the country. To read the complete documentation and download the data, <a href="https://www.scb.se/en/About-us/news-and-press-releases/statistics-sweden-to-publish-preliminary-statistics-on-deaths-in-sweden/" target="_blank"> click here.</a>
 
 \
-This page was built with the purpose of supporting the study of how the Swedish government has dealt with the COVID-19 outbreak. We included two sections with many charts, two tables and a map of Sweden divided into regions. All the material is interactive and we kindly recommend the visitors to explore the buttons and move the cursor over the images. This documentation includes a basic bibliograhy that will be constantly updated. Academic studies, official reports, newspapers and statistics are part of our sources. 
+This page was built with the purpose of supporting the study of how the Swedish government has dealt with the COVID-19 outbreak. We included different sections with many charts, tables and a map of Sweden divided into regions. All the material is interactive and we kindly recommend the visitors to explore the buttons and move the cursor over the images. This documentation includes a basic bibliography that will be constantly updated. Academic studies, official reports, newspapers and statistics are part of our sources. 
 
 \
 It is also important to highlight that the use of the content herein is under the umbrella of the Global Pandemic Network, COVID-19 - Cities and Human Rights. The group is coordinated by Dr. Ronald Car, Associate Professor, University of Macerata, and by the PhD Candidate Maria Antonia Tigre, Pace University, Regional Director, Lat. Am. Global Network for the Study of Human Rights and the Environment. My name is Wellington Migliari, PhD in Law and Political Science, member of the Institut de Recerca TransJus, University of Barcelona, Spain.
